test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_configurables/src/lib.sw
library;

pub const LIB_X: u64 = 5;

pub const LIB_Y: u64 = 5;

pub const LIB_Z: u64 = 5;
